# report

./: Makefile  README.md  honor-the-options-in-main-RHEL-624676-Fedora-635107.patch  report.spec  strata-send-original-filenames.patch
src/: INSTALL  Makefile  TODO  aclocal.m4  configure  configure.ac  getproduct.patch  index.html  makefile.am  makefile.in  report.spec.in
src/etc/: Makefile.am  Makefile.in  report.conf.5
src/etc/report.d/: RHEL-bugzilla.redhat.com.conf  RHEL.conf  bugzilla.redhat.com.conf  ftp.conf  localsave.conf  scp.conf  strata-test.conf
src/examples/: IOtest.py  Makefile.am  Makefile.in  gtk-report.py  meh-test.py  newt-report.py  text-report.py
src/po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  en.gmo  en.po  pl.gmo  pl.po  report.pot  ru.gmo  ru.po  uk.gmo  uk.po
src/python/: Makefile.am  Makefile.in
src/python/report/: __init__.py  accountmanager.py  release_information.py
src/python/report/io/: GTKIO.py  NewtIO.py  TextIO.py  __init__.py
src/python/report/plugins/RHEL-bugzilla/: __init__.py  filer.py
src/python/report/plugins/bugzilla/: __init__.py  filer.py
src/python/report/plugins/ftp/: __init__.py
src/strata_client/: attachFile  c_strata_client_error.c  c_strata_client_test.c  createCase  dummy_signature.xml  getAttachment  getCase  getSignature  listAttachments  listCases  listSignatures  makefile.am  makefile.in  postSignature  sealert-error-mixed.xml  sealert-error-signature.xml  sealert-report.xml  showOutfile  slightly_bad_signature.xml  strata_client.h  strata_client_lib.c
(+5 files in other folders)
