AC_INIT([report], [0.18])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL
AM_GNU_GETTEXT_VERSION([0.17])
AM_GNU_GETTEXT([external])

AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([ po/Makefile.in
 report.spec
 makefile
 python/Makefile
 etc/Makefile
 examples/Makefile
 strata_client/makefile
])
AM_PATH_PYTHON
AC_OUTPUT
